<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zeiss.cloudcam.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <GridLayout
        android:id="@+id/headerGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:rowCount="1"
        android:columnCount="1"
        android:background="@color/zeiss_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="Cloud Cam"/>

    </GridLayout>

    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:rowCount="3"
        android:columnCount="3"
        android:background="@color/white_semitransparent_background">

        <ToggleButton
            android:id="@+id/isoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:text="@string/iso"
            android:textOff="@string/iso"
            android:textOn="@string/iso" />

        <TextView
            android:id="@+id/isoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <ToggleButton
            android:id="@+id/focusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/focus"
            android:textOff="@string/focus"
            android:textOn="@string/focus" />

        <TextView
            android:id="@+id/focusDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0.0"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <ToggleButton
            android:id="@+id/exposureTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/exposure_time"
            android:textOff="@string/exposure_time"
            android:textOn="@string/exposure_time" />

        <TextView
            android:id="@+id/exposureTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/captureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/capture"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:text="@string/upload"
            android:layout_gravity="fill_horizontal|center_vertical"/>

    </GridLayout>

    <GridLayout
        android:id="@+id/controlGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGrid"
        android:rowCount="1"
        android:columnCount="3"
        android:background="@color/white_semitransparent_background">

        <SeekBar
            android:id="@+id/isoSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <ToggleButton
            android:id="@+id/autoFocusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="AF"
            android:textOff="AF"
            android:textOn="AF" />

        <SeekBar
            android:id="@+id/focusDistanceSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <SeekBar
            android:id="@+id/exposureTimeSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <ProgressBar
            android:id="@+id/captureProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_vertical|fill_horizontal" />

    </GridLayout>

</RelativeLayout>
